--- a/erpnext_customization/translations/fr.csv
+++ b/erpnext_customization/translations/fr.csv
@@ -3,3 +3,7 @@ apps/erpnext/erpnext/templates/includes/footer/footer_extension.html +9,Get Upda
 apps/frappe/frappe/email/doctype/newsletter/newsletter.py +136,Thank you for your interest in subscribing to our updates,Merci de votre intérêt en vous abonnant à notre lettre d'informations
 apps/frappe/frappe/email/doctype/newsletter/newsletter.py +137,Please verify your email id,Vérifiez s'il vous plaît votre adresse email
 apps/frappe/frappe/email/doctype/newsletter/newsletter.py +147,Confirm Your Email,Confirmez votre Email
+DocType: Purchase Invoice Item,Is Fixed Asset,Est immobilisé
+DocType: Report,Disabled,Désactivé
+DocType: Item,Standard Selling Rate,Prix de vente standard
+DocType: Appraisal,Employee,Employé
