--- a/erpnext_customization/translations/fr.csv
+++ b/erpnext_customization/translations/fr.csv
@@ -32,17 +32,17 @@ DocType: Depreciation Schedule,Journal Entry,Ecriture de journal
 DocType: Journal Entry,Accounts Receivable,Créances clients
 DocType: Journal Entry,Accounts Payable,Dettes fournisseurs
 apps/erpnext/erpnext/stock/doctype/warehouse/warehouse.js +18,General Ledger,Grand livre
-DocType: Letter Head,Letter Head,En-tête
+DocType: Letter Head,Letter Head,Entête
 DocType: Journal Entry,Print Heading,Intitulé d'impression
 DocType: Workflow State,Barcode,Code-barres
 apps/erpnext/erpnext/templates/print_formats/includes/taxes.html +5,Discount Amount,Remise
 DocType: C-Form Invoice Detail,Grand Total,Total TTC
 DocType: Print Settings,Send Print as PDF,Envoyer les documents en PDF
 DocType: Print Settings,Send Email Print Attachments as PDF (Recommended),Envoi les documents par e-mail en PDF (recommandé)
-DocType: Print Settings,Repeat Header and Footer in PDF,Répétez en-tête et pied de page dans le PDF
+DocType: Print Settings,Repeat Header and Footer in PDF,Répétez entête et pied de page dans le PDF
 DocType: Print Settings,Send document web view link in email,Envoyer un lien d'affichage web du document dans l'e-mail
 DocType: Print Settings,Compact Item Print,Limiter impression article
-DocType: Print Settings,"Always add ""Draft"" Heading for printing draft documents",Toujours ajouter l'en-tête ""Brouillon"" pour l'impression des brouillons
+DocType: Print Settings,"Always add ""Draft"" Heading for printing draft documents",Toujours ajouter l'entête ""Brouillon"" pour l'impression des brouillons
 DocType: Journal Entry,Write Off Amount,Montant de la perte
 DocType: POS Profile,Write Off Account,Compte créance irrécouvrable
 DocType: POS Profile,Write Off Cost Center,Centre de coûts créance irrécouvrable
@@ -137,7 +137,7 @@ DocType: Item,Is Sales Item,Est un article vendu
 DocType: Item,Has Variants,A des Variantes
 DocType: Item Tax,Tax Rate,Taux d'imposition
 DocType: Customer,Individual,Particulier
-apps/frappe/frappe/templates/generators/web_form.html +52,Please sign-up or login to begin,Inscrivez-vous ou connectez-vous s'il vous plaît pour commencer
+apps/frappe/frappe/templates/generators/web_form.html +52,Please sign-up or login to begin,Connectez-vous svp pour commencer
 DocType: Supplier Quotation,Opportunity,Opportunité
 DocType: Opportunity,Mins to first response,Mins avant la première réponse
 DocType: Opportunity,Opportunity From,Opportunité depuis
@@ -156,3 +156,4 @@ apps/erpnext/erpnext/config/crm.py +6,Sales Pipeline,Pipeline des ventes
 apps/erpnext/erpnext/config/learn.py +107,Lead to Quotation,Du prospect au devis
 ,Quotation Trends,Evolution des devis
 ,Sales Order Trends,Evolution des commandes
+apps/frappe/frappe/templates/includes/comments/comments.html +39,Your email address,Votre adresse e-mail
