--- a/erpnext_customization/translations/fr.csv
+++ b/erpnext_customization/translations/fr.csv
@@ -181,3 +181,4 @@ DocType: Workflow State,Comment,Commentaire
 DocType: Contact,Salutation,Civilité
 TODO,Valid Till,Valide jusqu'au
 DocType: Buying Settings,Naming Series,Séries Nommées
+TODO,Only {0} in stock for item {1},Seulement {0} en stock pour l'article {1}
