--- a/erpnext_customization/translations/fr.csv
+++ b/erpnext_customization/translations/fr.csv
@@ -189,3 +189,5 @@ TODO,Loading Payment System,Chargement du Module de Paiement
 TODO,Confirming Payment,Confirmation du Paiement
 TODO,Payment Request for {0},Demande de Paiement pour {0}
 apps/erpnext/erpnext/templates/includes/cart/cart_dropdown.html +21,Cart is Empty,Le panier est vide
+TODO,Balance (Receivable),Solde (Dû)
+TODO,Balance (Payable),Solde (Avoir)
