--- a/erpnext_customization/translations/fr.csv
+++ b/erpnext_customization/translations/fr.csv
@@ -191,3 +191,4 @@ TODO,Payment Request for {0},Demande de Paiement pour {0}
 apps/erpnext/erpnext/templates/includes/cart/cart_dropdown.html +21,Cart is Empty,Le panier est vide
 TODO,Balance (Receivable),Solde (Dû)
 TODO,Balance (Payable),Solde (Avoir)
+TODO,Order Confirmation,Confirmation de Commande
