--- a/erpnext_customization/translations/fr.csv
+++ b/erpnext_customization/translations/fr.csv
@@ -54,7 +54,7 @@ DocType: Purchase Invoice,Terms,Termes
 apps/erpnext/erpnext/config/accounts.py +107,Accounting Statements,Etats Comptables
 apps/erpnext/erpnext/config/accounts.py +136,Banking and Payments,Opérations Bancaires et Paiements
 apps/erpnext/erpnext/config/accounts.py +140,Update Bank Transaction Dates,Mettre à Jour les Dates de Transaction
-apps/erpnext/erpnext/config/accounts.py +146,Match Payments with Invoices,Lettrage Comptable
+apps/erpnext/erpnext/config/accounts.py +146,Match Payments with Invoices,Rapprocher les Paiements des Factures
 ,Bank Reconciliation Statement,État de Rapprochement Bancaire
 ,Bank Clearance Summary,Synthèse de la Compensation Bancaire
 DocType: Item,Moving Average,Prix Moyen Pondéré
@@ -189,6 +189,5 @@ TODO,Loading Payment System,Chargement du Module de Paiement
 TODO,Confirming Payment,Confirmation du Paiement
 TODO,Payment Request for {0},Demande de Paiement pour {0}
 apps/erpnext/erpnext/templates/includes/cart/cart_dropdown.html +21,Cart is Empty,Le panier est vide
-TODO,Balance (Receivable),Solde (Dû)
-TODO,Balance (Payable),Solde (Avoir)
 TODO,Order Confirmation,Confirmation de Commande
+apps/erpnext/erpnext/public/js/payment/pos_payment.html +17,Write off,Arrondi
