--- a/erpnext_customization/translations/fr.csv
+++ b/erpnext_customization/translations/fr.csv
@@ -191,3 +191,4 @@ TODO,Payment Request for {0},Demande de Paiement pour {0}
 apps/erpnext/erpnext/templates/includes/cart/cart_dropdown.html +21,Cart is Empty,Le panier est vide
 TODO,Order Confirmation,Confirmation de Commande
 apps/erpnext/erpnext/public/js/payment/pos_payment.html +17,Write off,Arrondi
+TODO,Payment Ordered,Paiement Demandé
