Britlog module desk visibility

--- a/erpnext_customization/translations/fr.csv
+++ b/erpnext_customization/translations/fr.csv
@@ -202,3 +202,7 @@ ERPNext Customization,Unsubscribed,Désabonné
 ERPNext Customization,Hard Bounce,Erreur Permanente
 ERPNext Customization,Error Related To,Erreur Liée A
 ERPNext Customization,Track emails to increase deliverability.,Suivre les emails pour améliorer la délivrabilité.
+ERPNext Customization,Set Shipping Address or Billing Address,Veuillez choisir une adresse de livraison ou facturation
+ERPNext Customization,Add a new address,Ajouter une nouvelle adresse
+ERPNext Customization,New Address,Nouvelle Adresse
+ERPNext Customization,More details,Plus de détails
